--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <a href="#title">WORK</a> 
         </button>
         <button>
-            <a href="ABOUT.html">ABOUT</a>
+            <a href="about.html">ABOUT</a>
         </button>
     </header>
 
